--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -1,6 +1,6 @@
 //Image Container
 .image-container {
-  background-color: $gray-50c;
+  background-color: $color-gray-2;
   border-radius: 5px;
   padding: 1rem;
   &.double-padding {
