--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -143,7 +143,7 @@ $sidebar-background: #354052;
     align-items: center;
 
     border-radius: 50px;
-    background-color: $gray-150;
+    background-color: $color-gray-3;
     margin-right: auto;
 
     float: left;//fallback
