--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,7 +4,7 @@
 
 /* Imported base components
   ================================================== */
-@import "colors/colors";
+// @import "colors/colors";
 @import "colors/given-colors";
 @import "mixins/mixins";
 @import "variables/variables";
