--- a/src/sass/base/extendables/_extendables.scss
+++ b/src/sass/base/extendables/_extendables.scss
@@ -44,7 +44,7 @@
   }
   &::-webkit-scrollbar-thumb {
     background-clip: content-box;
-    background-color: $gray-400c;
+    background-color: $color-gray-3;
     border: 4px solid transparent;
     border-radius: 10px;
     min-height: 2rem;
@@ -62,7 +62,7 @@
   }
   &::-webkit-scrollbar-thumb {
     background-clip: content-box;
-    background-color: rgba($gray-200c, 0.3);
+    background-color: rgba($color-gray-2, 0.3);
     border: 4px solid transparent;
     border-radius: 10px;
     min-height: 2rem;
