--- a/src/sass/modules/actions/_button-group.scss
+++ b/src/sass/modules/actions/_button-group.scss
@@ -1,5 +1,5 @@
 @mixin button-group($background-color, $color) {
-  .button { @include button($color-primary, $color-primary-dark, $color-white); }
+  .button { @include button($background-color, darken($background-color, 10%), $color); }
   input:checked ~ label { //active state of button-group
     background-color: darken($background-color, 10%);
     border-color: darken($background-color, 10%);
@@ -7,7 +7,7 @@
 }
 
 @mixin button-group--border($background-color, $checked-color) {
-  .button { @include transparent--button($gray-600); }
+  .button { @include transparent--button($color-gray-4); }
   input:checked ~ label { //active state of button-group
     background-color: $background-color;
     border-color: $background-color;
@@ -24,36 +24,36 @@
   padding: 0;
   overflow: auto;
 
-  .button--radio    { @include button-group($blue, $white);} //default button-group style
-  &.button--blue    { .button--radio { @include button-group($blue, $white); } }
-  &.button--green   { .button--radio { @include button-group($green, $white); } }
-  &.button--orange  { .button--radio { @include button-group($orange, $black); } }
-  &.button--purple  { .button--radio { @include button-group($purple, $white); } }
-  &.button--red     { .button--radio { @include button-group($red, $white); } }
+  .button--radio    { @include button-group($color-blue, $color-white);} //default button-group style
+  &.button--blue    { .button--radio { @include button-group($color-blue, $color-white); } }
+  &.button--green   { .button--radio { @include button-group($color-green, $color-white); } }
+  &.button--orange  { .button--radio { @include button-group($color-orange, $color-black); } }
+  &.button--purple  { .button--radio { @include button-group($color-purple, $color-white); } }
+  &.button--red     { .button--radio { @include button-group($color-red, $color-white); } }
   &.button--gray,
   &.button--grey {
-    .button--radio { @include button-group($gray-200, $gray-900); }
-    .button { border-color: $gray-300 !important; }
+    .button--radio { @include button-group($color-gray-4, $color-white); }
+    .button { border-color: $color-gray-3 !important; }
   }
 
   //Border Button Groups
   &.button--border {
-    .button--radio    { @include button-group--border($blue, $white);} //default button-group--border style
-    &.button--blue    { .button--radio { @include button-group--border($blue, $white); } }
-    &.button--green   { .button--radio { @include button-group--border($green, $white); } }
-    &.button--orange  { .button--radio { @include button-group--border($orange, $black); } }
-    &.button--purple  { .button--radio { @include button-group--border($purple, $white); } }
-    &.button--red     { .button--radio { @include button-group--border($red, $white); } }
+    .button--radio    { @include button-group--border($color-blue, $color-white);} //default button-group--border style
+    &.button--blue    { .button--radio { @include button-group--border($color-blue, $color-white); } }
+    &.button--green   { .button--radio { @include button-group--border($color-green, $color-white); } }
+    &.button--orange  { .button--radio { @include button-group--border($color-orange, $color-black); } }
+    &.button--purple  { .button--radio { @include button-group--border($color-purple, $color-white); } }
+    &.button--red     { .button--radio { @include button-group--border($color-red, $color-white); } }
     &.button--gray,
     &.button--grey {
-      .button--radio { @include button-group--border($gray-200, $gray-900); }
-      .button { border-color: $gray-300 !important; }
+      .button--radio { @include button-group--border($color-gray-3, $color-gray-4); }
+      .button { border-color: $color-gray-3 !important; }
     }
     .button {
-      border: 1px solid $gray-300;
+      border: 1px solid $color-border;
       display: inline-block;
       background-color: transparent;
-      color: $gray-600;
+      color: $color-subtext;
     }
   }
 
