Update tags and banner links

--- a/src/sass/modules/banner/_banner.scss
+++ b/src/sass/modules/banner/_banner.scss
@@ -41,6 +41,7 @@
     border-bottom: solid 2px;
     color: inherit;
     cursor: pointer;
+    text-decoration: none;
 
     &:focus,
     &:hover {
