--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -63,7 +63,10 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
           text-decoration: none;
           @include transition(border-bottom 0.2s ease-out);
 
-          &:hover, &.active { border-bottom: 2px solid $header-text-color; }
+          &:hover, &.active {
+            border-bottom: 2px solid $header-text-color;
+            opacity: 1;
+          }
 
         }
       }
@@ -134,7 +137,10 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
         border-bottom: 3px solid transparent;
         @include transition(border-bottom 0.2s ease-out);
 
-        &:hover, &.active  { border-bottom: 3px solid $sub-nav-text-color; }
+        &:hover, &.active  {
+          border-bottom: 3px solid $sub-nav-text-color;
+          opacity: 1;
+        }
       }
     }
   }
