Update table code and styles

--- a/src/sass/base/colors/_given-colors.scss
+++ b/src/sass/base/colors/_given-colors.scss
@@ -28,6 +28,10 @@
   $color-gray-1:                      #F3F3F9 !default;
   $color-white:                       #FFFFFF !default;
 
+  /* Data Visuals */
+  $color-data-teal:                   #64CCC9;
+  $color-data-purple:                 #9F8FCA;
+
   /* Gradient */
   $color-gradient:                    linear-gradient(-45deg, #4d4677, #7175AA);
 
