--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -930,6 +930,7 @@ footer {
   border-radius: 5px;
   margin-right: $space-xs;
   margin-bottom: $space-xs;
+  text-align: center;
 
   &.color-gradient { width: calc((125px * 2) + #{$space-xs}); }
 
@@ -955,6 +956,9 @@ footer {
   &.color-gray-2 { background-color: $color-gray-2; color: $color-black; }
   &.color-gray-1 { background-color: $color-gray-1; color: $color-black; }
   &.color-white { background-color: $color-white; color: $color-black; border: 2px solid $color-gray-2; }
+
+  &.color-data-teal { background-color: $color-data-teal; color: $color-white; }
+  &.color-data-purple { background-color: $color-data-purple; color: $color-white; }
 
   &.color-gradient { background-image: $color-gradient; color: $color-white; }
 }
