--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -194,7 +194,7 @@
         width: 100%;
         height: 100%;
         transform: translateX(-100%);
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .7), transparent);
+        background: linear-gradient(90deg, transparent, rgba($color-black, .07), transparent);
         animation: loadingCard 1.2s infinite;
         top: 0;
       }
