Remove hover on card list links

--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -103,6 +103,7 @@
         a {
           margin: -#{$space-s} -#{$space-m};
           padding: $space-s $space-m;
+          &:hover { opacity: 1; }
         }
       }
     }
