--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -148,11 +148,11 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
 
 /* Mobile Navigation Icon
   =========================================================================== */
-.button--mobile-sidebar {
-  @extend %icon-purple;
-  @extend .button;
-  @extend .button--transparent;
-  @extend .button--icon;
-  @extend .button--purple;
-  @media #{$tablet} { display: none; }
-}
+// .button--mobile-sidebar {
+//   @extend %icon-purple;
+//   @extend .button;
+//   @extend .button--transparent;
+//   @extend .button--icon;
+//   @extend .button--purple;
+//   @media #{$tablet} { display: none; }
+// }
