Update gradient and default transparent button

--- a/src/sass/base/colors/_given-colors.scss
+++ b/src/sass/base/colors/_given-colors.scss
@@ -33,7 +33,7 @@
   $color-data-purple:                 #9F8FCA;
 
   /* Gradient */
-  $color-gradient:                    linear-gradient(-45deg, #4d4677, #7175AA);
+  $color-gradient:                    linear-gradient(-45deg, $color-data-teal, $color-purple);
 
   /* Primary and Accent */
   $color-primary:               $color-purple !default;
