adjust z-index for tables

--- a/src/sass/modules/table/table.scss
+++ b/src/sass/modules/table/table.scss
@@ -171,7 +171,7 @@ $flex-table--header-text:  $color-white;
       left: 100%;
       right: 0;
       bottom: 0;
-      z-index: 6;
+      z-index: $zindex-overpanel;
 
       @media #{$tablet} {
         overflow: hidden;
