--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -14,14 +14,14 @@
 	grid-column: 1 / -1;
 	@media #{$tablet} {
 		grid-column: span $span;
-		@supports(display: grid) { width: 100%; }
+		@supports(display: grid) { width: auto; }
 	}
 }
 
 @mixin grid-column_desktop($span) {
 	@media #{$desktop} {
 		grid-column: span $span;
-		@supports(display: grid) { width: 100%; }
+		@supports(display: grid) { width: auto; }
 	}
 }
 
